--- a/style.css
+++ b/style.css
@@ -1,186 +1,207 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&family=Oswald:wght@300&display=swap');
 
+/* Styles généraux */
 body {
-	font-family: 'Noto Sans JP', sans-serif;
-	padding: 0 2%;
-	margin: 0;
+  font-family: 'Noto Sans JP', sans-serif;
+  padding: 0 2%;
+  margin: 0;
 }
 
+/* Barre de navigation */
 nav {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
-	background-color: white;
-	position: sticky;
-	top: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  position: sticky;
+  top: 0;
 }
+
 nav .profile {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 nav .profile img {
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	object-fit: contain;
-	object-position: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: contain;
+  object-position: center;
 }
 
 nav .profile h1 {
-	margin-left: 10px;
-	font-size: 15px;
+  margin-left: 10px;
+  font-size: 15px;
 }
-
 
 nav ul {
-	display: flex;
-	list-style-type: none;
-}
-nav ul li {
-	margin-left: 20px;
-	cursor: pointer;
-	border-bottom: 1px solid #fff;
-}
-nav ul li:hover {
-	border-bottom-color: #000;
-}
-nav ul li a {
-    text-decoration: none; /* Supprime la soulignement du lien */
-    color: black; /* Modifie la couleur du lien */
+  display: flex;
+  list-style-type: none;
 }
 
+nav ul li {
+  margin-left: 20px;
+  cursor: pointer;
+  border-bottom: 1px solid #fff;
+}
+
+nav ul li:hover {
+  border-bottom-color: #000;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+/* Contenu de la page */
 .page-content {
-	margin: 4%;
+  margin: 4%;
 }
+
 .page-content header {
-	margin-top: 5%;
-	max-width: 80%;
+  margin-top: 5%;
+  max-width: 80%;
 }
+
 .page-content header h1 {
-	margin: 0;
-	text-transform: uppercase;
-	font-family: 'Oswald', sans-serif;
-	font-size: 6vw;
+  margin: 0;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-size: 6vw;
 }
+
 .page-content header p {
-	line-height: 30px;
-	color: #818181;
+  line-height: 30px;
+  color: #818181;
 }
+
 .page-content header button {
-	background-color: inherit;
-	border: none;
-	outline: none;
-	padding: 0;
-	font-size: 15px;
-	font-weight: bold;
-	padding-bottom: 5px;
-	border-bottom: 1px solid #ccc;
-	cursor: pointer;
+  background-color: inherit;
+  border: none;
+  outline: none;
+  padding: 0;
+  font-size: 15px;
+  font-weight: bold;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #ccc;
+  cursor: pointer;
 }
+
 .page-content header button:hover {
-	color: #ccc;
-	border-bottom-color: #000;
+  color: #ccc;
+  border-bottom-color: #000;
 }
+
 .page-content .presentation-image {
-	margin-top: 5%;
+  margin-top: 5%;
 }
+
 .page-content .presentation-image img {
-	max-width: 100%;
-	height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .page-content .projects-section {
-	margin-top: 6%;
+  margin-top: 6%;
 }
+
 .page-content .projects-section h1 {
-	font-family: 'Oswald', sans-serif;
-	text-transform: uppercase;
-	font-size: 3vw;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-size: 3vw;
 }
+
 .page-content .projects-section .projects {
-	display: flex;
-	flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
+
 .page-content .projects-section .project {
-	margin-right: 20px;
-	max-width: 195px;
+  margin-right: 20px;
+  max-width: 195px;
 }
+
 .page-content .projects-section .project h4 {
-	margin: 0;
+  margin: 0;
 }
+
 .page-content .projects-section .project .description {
-	font-size: 10px;
+  font-size: 10px;
 }
+
 .page-content .projects-section .project .dates {
-	font-size: 13px;
-	color: rgb(145, 145, 145);
+  font-size: 13px;
+  color: rgb(145, 145, 145);
 }
 
+/* Pied de page */
 footer {
-	margin-top: 5%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	padding: 10px;
-	background-color: #000;
-	color: white;
+  margin-top: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #000;
+  color: white;
 }
 
-
-footer .colonne {	
-	font-family: 'Noto Sans JP', sans-serif;
+footer .colonne {
+  font-family: 'Noto Sans JP', sans-serif;
 }
-
 
 footer .colonne p,
-footer .colonne a {	
-	font-size: 12px;	
-	color: #ccc;	
-	cursor: pointer;	
-	text-decoration: none;
+footer .colonne a {
+  font-size: 12px;
+  color: #ccc;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 footer .colonne p:hover,
-footer .colonne a:hover {	
-	color: #fff;
+footer .colonne a:hover {
+  color: #fff;
 }
-footer .colonne h3 {	
-	font-size: 20px;	
-	color: #fff;
-	font-family: 'Oswald', sans-serif;
-	text-transform: uppercase;
+
+footer .colonne h3 {
+  font-size: 20px;
+  color: #fff;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
 }
-  
 
-  
-  
-
+/* Responsive */
 @media screen and (max-width: 700px) {
-	nav {
-		justify-content: center;
-	}
-	nav ul {
-		display: none;
-	}
+  nav {
+    justify-content: center;
+  }
 
-	.page-content header {
-		margin-top: 10%;
-		max-width: 100%;
-	}
-	.page-content .projects-section {
-		margin-top: 15%;
-	}
-	.page-content .projects-section h1 {
-		font-size: 1.5em;
-	}
-	.page-content .projects-section .project {
-		margin-right: 0;
-		margin-bottom: 20px;
-		max-width: 100%;
-	}
-	.page-content .projects-section .project .description {
-		font-size: 13px;
-	}
+  nav ul {
+    display: none;
+  }
+
+  .page-content header {
+    margin-top: 10%;
+    max-width: 100%;
+  }
+
+  .page-content .projects-section {
+    margin-top: 15%;
+  }
+
+  .page-content .projects-section h1 {
+    font-size: 1.5em;
+  }
+
+  .page-content .projects-section .project {
+    margin-right: 0;
+    margin-bottom: 20px;
+    max-width: 100%;
+  }
+
+  .page-content .projects-section .project .description {
+    font-size: 13px;
+  }
 }
