--- a/Style_Formulaire.css
+++ b/Style_Formulaire.css
@@ -1,139 +1,145 @@
+/* Import des polices */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&family=Oswald:wght@300&display=swap');
-/*STYLES GENERAUX*/
+
+/* Styles généraux */
 * {
-    font-family: Avenir, sans-serif;
-    padding: 0;
-    margin: 0;
-    text-align: justify;
-    box-sizing: border-box;
-  }
-  
-  body {
-    background: #ededed;
-  }
-  
-  p {
-    font-size: 1em;
-    line-height: 1.5em;
-  }
-  
-  a {
-    text-decoration: none;
-    color: #000;
-  }
-  
-  /*HEADER*/
-  header {
-    width: 100%;
-    padding: 20px 0;
-    background: #000000;
-    height: 125px;
-  }
-  
-  header h1 {
-    color: white;
-    text-align: center;
-    width: 100%;
-    margin: 0;
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    font-size: 3vw;
-  }
-  
-  /* Formulaires */
-  .form-style-1 {
-    margin: 10px auto;
-    max-width: 400px;
-    padding: 20px 12px 10px 20px;
-    font: 13px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  }
-  
-  .form-style-1 li {
-    padding: 0;
-    display: block;
-    list-style: none;
-    margin: 10px 0 0 0;
-  }
-  
-  .form-style-1 label {
-    margin: 0 0 3px 0;
-    padding: 0;
-    display: block;
-    font-weight: bold;
-  }
-  
-  .form-style-1 input[type='text'],
-  .form-style-1 input[type='date'],
-  .form-style-1 input[type='datetime'],
-  .form-style-1 input[type='number'],
-  .form-style-1 input[type='search'],
-  .form-style-1 input[type='time'],
-  .form-style-1 input[type='url'],
-  .form-style-1 input[type='email'],
-  textarea,
-  select {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    border: 1px solid #bebebe;
-    padding: 7px;
-    margin: 0;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    outline: none;
-  }
-  
-  .form-style-1 input[type='text']:focus,
-  .form-style-1 input[type='date']:focus,
-  .form-style-1 input[type='datetime']:focus,
-  .form-style-1 input[type='number']:focus,
-  .form-style-1 input[type='search']:focus,
-  .form-style-1 input[type='time']:focus,
-  .form-style-1 input[type='url']:focus,
-  .form-style-1 input[type='email']:focus,
-  .form-style-1 textarea:focus,
-  .form-style-1 select:focus {
-    -moz-box-shadow: 0 0 8px #88d5e9;
-    -webkit-box-shadow: 0 0 8px #88d5e9;
-    box-shadow: 0 0 8px #88d5e9;
-    border: 1px solid #88d5e9;
-  }
-  
-  .form-style-1 .field-divided {
-    width: 49%;
-  }
-  
-  .form-style-1 .field-long {
-    width: 100%;
-  }
-  
-  .form-style-1 .field-select {
-    width: 100%;
-  }
-  
-  .form-style-1 .field-textarea {
-    height: 100px;
-  }
-  
-  .form-style-1 input[type='submit'],
-  .form-style-1 input[type='button'] {
-    background: #4b99ad;
-    padding: 8px 15px 8px 15px;
-    border: none;
-    color: #fff;
-  }
-  
-  .form-style-1 input[type='submit']:hover,
-  .form-style-1 input[type='button']:hover {
-    background: #4691a4;
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-  }
-  
-  .form-style-1 .required {
-    color: red;
-  }
-  
+  font-family: 'Noto Sans JP', sans-serif;
+  padding: 0;
+  margin: 0;
+  text-align: justify;
+  box-sizing: border-box;
+  box-shadow: none;
+}
+
+body {
+  background: #ededed;
+}
+
+p {
+  font-size: 1em;
+  line-height: 1.5em;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+/* HEADER */
+header {
+  width: 100%;
+  padding: 20px 0;
+  background: #000000;
+  height: 125px;
+}
+
+header h1 {
+  color: white;
+  text-align: center;
+  width: 100%;
+  margin: 0;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-size: 3vw;
+}
+
+/* Formulaires */
+.form-style-1 {
+  margin: 10px auto;
+  max-width: 400px;
+  padding: 20px 12px 10px 20px;
+  font: 13px 'Noto Sans JP', sans-serif;
+} 
+
+.form-style-1 li {
+  padding: 0;
+  display: block;
+  list-style: none;
+  margin: 10px 0 0 0;
+}
+
+.form-style-1 label {
+  margin: 0 0 3px 0;
+  padding: 0;
+  display: block;
+  font-weight: bold;
+}
+
+.form-style-1 input[type='text'],
+.form-style-1 input[type='date'],
+.form-style-1 input[type='datetime'],
+.form-style-1 input[type='number'],
+.form-style-1 input[type='search'],
+.form-style-1 input[type='time'],
+.form-style-1 input[type='url'],
+.form-style-1 input[type='email'],
+textarea,
+select {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  border: 1px solid #bebebe;
+  padding: 7px;
+  margin: 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  outline: none;
+  border-radius: 5px; /* Ajout du border-radius pour les coins arrondis */
+}
+
+.form-style-1 input[type='text']:focus,
+.form-style-1 input[type='date']:focus,
+.form-style-1 input[type='datetime']:focus,
+.form-style-1 input[type='number']:focus,
+.form-style-1 input[type='search']:focus,
+.form-style-1 input[type='time']:focus,
+.form-style-1 input[type='url']:focus,
+.form-style-1 input[type='email']:focus,
+.form-style-1 textarea:focus,
+.form-style-1 select:focus {
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: 1px solid #88d5e9;
+}
+
+.form-style-1 .field-divided {
+  width: 49%;
+}
+
+.form-style-1 .field-long {
+  width: 100%;
+}
+
+.form-style-1 .field-select {
+  width: 100%;
+}
+
+.form-style-1 .field-textarea {
+  height: 100px;
+}
+
+.form-style-1 input[type='submit'],
+.form-style-1 input[type='button'] {
+  background: #4b99ad;
+  padding: 8px 15px 8px 15px;
+  border: none;
+  color: #fff;
+  border-radius: 5px; /* Ajout du border-radius pour les coins arrondis */
+  width: 100%; /* Rendre le bouton envoyer responsive */
+  margin-top: 10px; /* Ajout d'une marge en haut du bouton */
+}
+
+.form-style-1 input[type='submit']:hover,
+.form-style-1 input[type='button']:hover {
+  background: #4691a4;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+.form-style-1 .required {
+  color: red;
+}
